<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ket_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:text="@string/text_register" />

            <TextView
                android:id="@+id/tv_nama_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ket_register"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:text="@string/text_nama" />

            <EditText
                android:id="@+id/edt_input_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nama_reg"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_email_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_input_nama"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:text="@string/text_email" />

            <EditText
                android:id="@+id/edt_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_email_reg"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tv_wa_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_input_email"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:text="@string/text_no_wa" />

            <EditText
                android:id="@+id/edt_input_wa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_wa_reg"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/tv_tlp_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_input_wa"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:text="@string/text_tlp" />

            <EditText
                android:id="@+id/edt_input_tlp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tlp_reg"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/tv_alamat_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_input_tlp"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:text="@string/text_alamat" />

            <EditText
                android:id="@+id/edt_input_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_alamat_reg"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_input_alamat"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:text="@string/text_notif"
                android:layout_marginBottom="@dimen/dimen_8dp"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkbox"
                android:background="@drawable/bg_btn_screenshot"
                android:text="@string/text_btn_submit"
                android:layout_toRightOf="@id/checkbox"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkbox"
                android:layout_toRightOf="@id/btn_submit"
                android:background="@drawable/bg_btn_screenshot"
                android:text="@string/text_btn_reset"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_16dp"/>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>